--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/http-errors": "^1.8.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
@@ -24,6 +25,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "http-errors": "^1.8.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.34",
